auth-services completed

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,23 @@
+
 PORT=3000
 NODE_ENV=dev
-MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_URI=mongodb+srv://navinpal512002:Navin@videostreamingplatform.f87yhew.mongodb.net/?appName=VideostreamingPlatform
+
+# JWT Authentication
+# IMPORTANT: Generate a secure secret for production!
+# Run: openssl rand -base64 32
+JWT_SECRET=f3PsJwNPoKe6w3LFKgNDOzfekltxoDW/I9KpzEpTrT8=
+JWT_EXPIRES_IN=7d
+
+# File Upload Configuration
+UPLOAD_DIR=uploads
+MAX_FILE_SIZE=1073741824
+# File size in bytes: 1GB = 1073741824, 500MB = 524288000, 100MB = 104857600
+
+# Allowed Video MIME Types (comma-separated, no spaces)
+ALLOWED_MIME_TYPES=video/mp4,video/webm,video/quicktime,video/x-msvideo
+
+# Frontend URL (for CORS and Socket.io)
+# Update this to match your frontend development URL
+FRONTEND_URL=http://localhost:5173
+
