--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
-    "singleQuote": true,
-    "semi": true,
-    "tabWidth": 4
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "arrowParens": "avoid",
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
