--- a/package.json
+++ b/package.json
@@ -1,50 +1,56 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/server.js",
-    "type": "module",
-    "scripts": {
-        "dev": "cross-env NODE_ENV=dev nodemon src/server.js",
-        "format:fix": "prettier . --write",
-        "format:check": "prettier . --check",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint . --fix",
-        "prepare": "husky"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/NaVIn69/Video_streaming_platfrom_backend.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/NaVIn69/Video_streaming_platfrom_backend/issues"
-    },
-    "homepage": "https://github.com/NaVIn69/Video_streaming_platfrom_backend#readme",
-    "dependencies": {
-        "bcryptjs": "^3.0.3",
-        "dotenv": "^17.2.3",
-        "express": "^5.2.1",
-        "http-errors": "^2.0.1",
-        "jsonwebtoken": "^9.0.3",
-        "mongoose": "^9.1.5",
-        "winston": "^3.19.0"
-    },
-    "devDependencies": {
-        "cross-env": "^10.1.0",
-        "eslint": "^9.39.2",
-        "express-validator": "^7.3.1",
-        "husky": "^9.1.7",
-        "lint-staged": "^16.2.7",
-        "nodemon": "^3.1.11",
-        "prettier": "^3.8.1"
-    },
-    "lint-staged": {
-        "*.js": [
-            "prettier --write",
-            "eslint --fix"
-        ]
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/server.js",
+  "type": "module",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=dev nodemon src/server.js",
+    "format:fix": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:format": "npm run format:fix && npm run lint:fix",
+    "prepare": "husky"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NaVIn69/Video_streaming_platfrom_backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NaVIn69/Video_streaming_platfrom_backend/issues"
+  },
+  "homepage": "https://github.com/NaVIn69/Video_streaming_platfrom_backend#readme",
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "http-errors": "^2.0.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "multer": "^1.4.5-lts.1",
+    "slugify": "^1.6.6",
+    "socket.io": "^4.7.5",
+    "winston": "^3.19.0"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0",
+    "eslint": "^9.39.2",
+    "express-validator": "^7.3.1",
+    "globals": "^17.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  }
 }
