--- a/.env.dev
+++ b/.env.dev
@@ -21,3 +21,5 @@ ALLOWED_MIME_TYPES=video/mp4,video/webm,video/quicktime,video/x-msvideo
 # Update this to match your frontend development URL
 FRONTEND_URL=http://localhost:5173
 
+
+GEMINI_API_KEY=AIzaSyAMAa0B6OSU2273tWLHNMjrzGz9bmvGNH0
