--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
   },
   "homepage": "https://github.com/NaVIn69/Video_streaming_platfrom_backend#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.980.0",
+    "@aws-sdk/s3-request-presigner": "^3.980.0",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fluent-ffmpeg": "^2.1.3",
     "http-errors": "^2.0.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.5",
     "winston": "^3.19.0"
