--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ffmpeg-static": "^5.3.0",
+    "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "http-errors": "^2.0.1",
     "jsonwebtoken": "^9.0.3",
