--- a/shared/package.json
+++ b/shared/package.json
@@ -2,5 +2,13 @@
     "name": "@video-stream/shared",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "jsonwebtoken": "^9.0.2",
+        "http-errors": "^2.0.0",
+        "dotenv": "^16.4.5",
+        "winston": "^3.11.0",
+        "@aws-sdk/client-s3": "^3.980.0",
+        "@aws-sdk/s3-request-presigner": "^3.980.0"
+    }
 }
